--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@
  */
 
 plugins {
-    id "com.jfrog.bintray" version "1.1"
+    id "com.jfrog.bintray" version "1.7.3"
 }
 
 apply plugin: 'java'
@@ -60,8 +60,8 @@ publishing {
 
 
 bintray {
-    user = bintray_user
-    key = bintray_api_key
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_KEY')
 
 //        configurations = ['deployables'] //When uploading configuration files
     // - OR -
